добавлены: методы записи в файл и чтения из файла, реализован  интерфейс Iterable для дерева, методы сортировки: по имени и по возрасту